# maskingtape

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SBOM.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  security.md  task.md
.github/workflows/: ci.yml
apps/api/: .gitignore  README.md  pyproject.toml
apps/api/maskingtape_api/: __init__.py  main.py
apps/api/maskingtape_api/routers/: health.py
apps/api/tests/: test_health.py
apps/desktop/: .gitignore  README.md  README_masked.md  pubspec.yaml
apps/desktop/lib/: main.dart  theme.dart
apps/desktop/lib/models/: detection.dart  file_task.dart
apps/desktop/lib/screens/: home_screen.dart
apps/desktop/lib/services/: anonymizer.dart  batch_processor.dart  cli_anonymizer.dart  file_picker.dart  file_reader.dart  shell.dart
apps/desktop/test/: batch_processor_test.dart  cli_anonymizer_test.dart  fakes.dart  file_reader_test.dart  widget_test.dart
apps/desktop/windows/: CMakeLists.txt
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/dev-server/: scanProxyPlugin.ts
apps/web/src/: App.tsx  index.css
bench/: README.md  confidence_analysis.py  evaluate.py  evaluate_masking.py  generate_dataset.py  mask_quality.py
bench/datasets/: synth_v1.jsonl
bench/generator/: __init__.py  distractors.py  documents.py  entities.py
bench/reports/: report_v1.md
bench/tests/: test_confidence_analysis.py  test_evaluate.py  test_generator.py  test_mask_quality.py
(+16 files in other folders)
