# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maskingtape-api"
version = "0.1.0"
description = "FastAPI REST API wrapper for maskingtape core."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Team maskingtape" }]
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["maskingtape_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
